--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="title"><span>Me, Myself and I</span></div>
   <div class="about-details">
     <div class="left">
-      <img src="images/DSC08808 (2).jpg" alt="">
+      <img src="Images/DSC08808 (2).jpg" alt="">
     </div>
     <div class="right">
       <div class="topic"></div>
