blink -caret and img fixed

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="title"><span>Me, Myself and I</span></div>
   <div class="about-details">
     <div class="left">
-      <img src="Images/IMG-20210702-WA0080.jpg" alt="">
+      <img src="Images/DSC08916.jpg" alt="">
     </div>
   
     <div class="right">
